--- a/EpicSchoolHomework/Views/LocalPhoto/EditLocalPhoto/EditLocalPhotoViewController.xib
+++ b/EpicSchoolHomework/Views/LocalPhoto/EditLocalPhoto/EditLocalPhotoViewController.xib
@@ -144,6 +144,7 @@
                 </segmentedControl>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="tintColor" systemColor="systemTealColor"/>
             <constraints>
                 <constraint firstItem="5ua-R9-X7I" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="61p-AC-tCb"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="78B-C1-2o4"/>
@@ -179,6 +180,9 @@
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
