--- a/EpicSchoolHomework/Views/AllItemsMapView/AllItemsMapViewController.xib
+++ b/EpicSchoolHomework/Views/AllItemsMapView/AllItemsMapViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -20,14 +20,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="h8f-zy-eEK">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </mapView>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Wtf-8i-UQs">
-                    <rect key="frame" x="137.5" y="64" width="139" height="32"/>
+                    <rect key="frame" x="118" y="20" width="139" height="32"/>
                     <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                     <segments>
                         <segment title="Карта"/>
@@ -38,7 +38,7 @@
                     </connections>
                 </segmentedControl>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OW7-6K-5Jy">
-                    <rect key="frame" x="174.5" y="834" width="65" height="18"/>
+                    <rect key="frame" x="155" y="639" width="65" height="18"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=" Где я?">
                         <imageReference key="image" image="location.fill" catalog="system" symbolScale="medium"/>
@@ -52,16 +52,53 @@
                         <action selector="moveToCurLocationButtonTapped:" destination="-1" eventType="touchUpInside" id="pBJ-RL-b7R"/>
                     </connections>
                 </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kWH-pJ-feF">
+                    <rect key="frame" x="305" y="273.5" width="50" height="120"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aDw-xL-GPh">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="m0P-hi-28Z"/>
+                                <constraint firstAttribute="height" constant="50" id="pFF-Oe-wvS"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="gray" title="+">
+                                <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="baseForegroundColor" systemColor="systemTealColor"/>
+                            </buttonConfiguration>
+                            <connections>
+                                <action selector="buttonZoomInTapped:" destination="-1" eventType="touchUpInside" id="CHC-Js-5Me"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ur-Ya-at7">
+                            <rect key="frame" x="0.0" y="70" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="1KJ-Dk-guq"/>
+                                <constraint firstAttribute="width" constant="50" id="p2M-Sc-gqc"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="gray" title="-">
+                                <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="baseForegroundColor" systemColor="systemTealColor"/>
+                            </buttonConfiguration>
+                            <connections>
+                                <action selector="buttonZoomOutTapped:" destination="-1" eventType="touchUpInside" id="qYD-me-ZSG"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="h8f-zy-eEK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7Ir-oN-7pP"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kWH-pJ-feF" secondAttribute="trailing" constant="20" id="8Sm-VP-bDO"/>
                 <constraint firstItem="h8f-zy-eEK" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="FqU-rR-fHb"/>
                 <constraint firstItem="Wtf-8i-UQs" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="HoG-FG-nHK"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="h8f-zy-eEK" secondAttribute="trailing" id="Lya-2L-Wlx"/>
                 <constraint firstItem="Wtf-8i-UQs" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RwL-IT-dgL"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="h8f-zy-eEK" secondAttribute="bottom" id="f4l-14-FoW"/>
+                <constraint firstItem="kWH-pJ-feF" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="meg-Qg-5zy"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="OW7-6K-5Jy" secondAttribute="bottom" constant="10" id="q8E-dG-c5M"/>
                 <constraint firstItem="OW7-6K-5Jy" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="w05-f9-Aoj"/>
             </constraints>
@@ -75,6 +112,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
